--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,22 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 /* Base */
 @layer base {
+  :root {
+    --color-primary: 204 8 22;
+    --color-primary-light: 239 13 29;
+    --color-primary-dark: 194 13 25;
+    --color-primary-contrast: 255 255 255;
+
+    --color-body: 255 255 255;
+  }
+
+  :root[class~='dark'] {
+    --color-primary: 195 168 69;
+    --color-primary-light: 205 176 70;
+    --color-primary-dark: 165 140 51;
+    --color-primary-contrast: 8 8 8;
+
+    --color-body: 0 0 0;
+  }
+
   h1 {
     @apply text-4xl font-bold;
   }
